tests/mm0_mmu/fail/bad-sort3412.mmu
-- bad modifier order
(sort s3412 provable free pure strict)